--- a/netflix.css
+++ b/netflix.css
@@ -23,6 +23,7 @@ html{
 }
 .email{
   border-radius: 4px;
+ 
 }
 .heading1{
   margin-top: 70px;
@@ -38,9 +39,10 @@ html{
 
 }
 .display2{
-  font-family: Arial, Helvetica, sans-serif;
-font-size: 1.4em;
-  padding-left: 60px;
+/* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+font-size: 1.7em;
+  padding-left: 80px;
+
 
 }
 .img{
@@ -57,9 +59,9 @@ width: 100%;
   font-size: 70px;
 }
 .display3{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+/* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 font-size: 1.7em;
-  padding-left: 70px;
+  /* padding-left: 30px; */
   
 
 }
@@ -73,6 +75,9 @@ font-size: 1.7em;
 }
 .clr{
   color: #a0a0a2;
+}
+.width{
+  width: 85%;
 }
 .eng{
   border-radius: 4px; 
