--- a/netflix.css
+++ b/netflix.css
@@ -36,6 +36,10 @@
 .email{
   border: 1px solid #a6a6a6;
 }
+.btn{
+  background-color: #e50914;
+  color: white;
+}
 .img{
   width: 70%;
 }
@@ -43,6 +47,160 @@
   padding-top: 540px;
 
 }
+.for-icon::before{
+  content: "1";
+    position: absolute;
+  top: 38%;
+        left: 4%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon2::before{
+  content: "2";
+    position: absolute;
+     top: 38%;
+        left: 18%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon3::before{
+  content: "3";
+    position: absolute;
+    top: 38%;
+        left: 31%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon4::before{
+  content: "4";
+    position: absolute;
+   top: 39%;
+        left: 44%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon5::before{
+  content: "5";
+    position: absolute;
+    top: 38%;
+      left: 58%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon6::before{
+  content: "6";
+    position: absolute;
+    top: 38%;
+        left: 71%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+.for-icon7::before{
+  content: "7";
+    position: absolute;
+    top: 38%;
+    left: 84%;
+    color: white;
+    font-family: "Netflix Sans", "Helvetica Neue", "Segoe UI", "Roboto", "Ubuntu";
+    font-size: 85px;
+    font-weight: 700;
+    z-index: 1;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke: 1px white;
+}
+@media all and (max-width: 768px){
+.for-icon4::before{
+   top: 38%;
+        left: 73%;
+        font-size: 60px;
+}
+.for-icon3::before{
+  left: 52%;
+        font-size: 60px;
+        top: 38%;
+}
+.for-icon2::before{
+   top: 38%;
+        left: 30%;
+        font-size: 60px;
+}
+.for-icon::before{
+   top: 38%;
+        left: 8%;
+        font-size: 60px;
+}
+}
+@media all and (max-width: 850px){
+.for-icon4::before{
+  
+        font-size: 40px;
+}
+.for-icon3::before{
+
+        font-size: 40px;
+}
+.for-icon2::before{
+
+        font-size: 40px;
+}
+.for-icon::before{
+
+        font-size: 40px;
+}
+.for-icon5::before{
+ 
+        font-size: 40px;
+}
+.for-icon6::before{
+ left: 70%;
+        font-size: 40px;
+}
+
+.for-icon7::before{
+ 
+        font-size: 40px;
+        left: 82%;
+}
+
+}
+@media all and (max-width: 575px){
+  .for-icon::before{
+top: 72%;
+        font-size: 99px;
+        left: 10%;
+}
+}
+
 .display2{
 /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 font-size: 1.7em;
